--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.2"
-  },
   "name": "api_rest_mongodb",
-  "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "app.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "express": "^5.0.0",
+    "mongoose": "^6.0.0",
+    "dotenv": "^16.0.0"
+  },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "jest": "^28.0.0",
+    "supertest": "^7.0.0"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
